# First-C-template-project

./: .gitignore  CMakeLists.txt  README.md
DataStructs/: DoublyLinkedList.cpp  DoublyLinkedList.h
docs/: CMakeLists.txt
src/: CMakeLists.txt  LatexDocument.hpp  main.cpp
src/DataStructs/: CMakeLists.txt  DoublyLinkedList.cpp  DoublyLinkedList.h  DoublyLinkedList.hpp  dummy.cpp
src/SortAlgos/: BubbleSort.cpp  BubbleSort.hpp  CMakeLists.txt
